syntax = "proto3";
package proto.v1.message;
option go_package = "github.com/textileio/bidbot/gen/v1;message";

import "google/protobuf/timestamp.proto";

message Auction {
    string id = 1;
    string payload_cid = 2;
    uint64 deal_size = 3;
    uint64 deal_duration = 4;
    uint64 fil_epoch_deadline = 5;
    Sources sources = 6; // Obsolete. For back compatibility only. Empty for closed auctions. 
    google.protobuf.Timestamp ends_at = 7;
    string client_address = 8;
}

message Bid {
    string auction_id = 1;
    string storage_provider_id = 2;
    bytes wallet_addr_sig = 3;
    int64 ask_price = 4;
    int64 verified_ask_price = 5;
    uint64 start_epoch = 6;
    bool fast_retrieval = 7;
}

message WinningBid {
    string auction_id = 1;
    string bid_id = 2;
    bytes encrypted = 3; // WinningBidConfidential message encrypted by bidbot's public key.
}

message WinningBidConfidential {
  Sources sources = 1;
}

message WinningBidProposal {
  string auction_id = 1;
  string bid_id = 2;
  string proposal_cid = 3;
}

message Sources {
  CARURL car_url = 1;
  CARIPFS car_ipfs = 2;

  message CARURL {
    string URL = 1;
  }

  message CARIPFS {
    string cid = 1;
    repeated string multiaddrs = 2;
  }
}


message BidBotEvent {
  google.protobuf.Timestamp ts = 1;
  oneof type {
    StartUp start_up = 2;
    StartFetching start_fetching = 3;
    ErrorFetching error_fetching = 4;
    StartImporting start_importing = 5;
    EndImporting end_importing = 6;
    Finalized finalized = 7;
    Errored errored = 8;
  }
  message StartUp {
    string semantic_version = 1;
    string storage_provider_id = 2;
    uint64 deal_start_window = 3;
    bool cid_gravity_configured = 4;
  };
  message StartFetching {
    string bid_id = 1;
    uint32 attempts = 2;
  };
  message ErrorFetching {
    string bid_id = 1;
    uint32 attempts = 2;
    string error = 3;
  };
  message StartImporting {
    string bid_id = 1;
    uint32 attempts = 2;
  };
  message EndImporting {
    string bid_id = 1;
    uint32 attempts = 2;
    string error = 3;
  };
  message Finalized {
    string bid_id = 1;
  };
  message Errored {
    string bid_id = 1;
    string error_cause = 2;
  };
}
